--- a/mytemplates/forumindex.html
+++ b/mytemplates/forumindex.html
@@ -86,7 +86,7 @@
                             <span class="icon iconfont-clock-outline listing-orders-with-filter__icon"></span>
                             <div>
                                 <a href="PostPage.html" class="listing-orders-with-filter__title">{{post.title}}</a>
-                                <p class="listing-orders-with-filter__description">Author: <b>{{post.short}}</b></p>
+                                <p class="listing-orders-with-filter__description">Author: <b>{{post.author}}</b></p>
                             </div>
                         </div>
                         <div class="text-lg-right text-md-right">
@@ -98,6 +98,7 @@
                             </span>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
                 <nav class="listings-pagination d-flex justify-content-center">
                     <ul class="pagination">
