--- a/mytemplates/PostPage.html
+++ b/mytemplates/PostPage.html
@@ -141,7 +141,7 @@
                     Don't save your word for appreciation
                 </p>
 
-                <a href= "/forum/?column_id={{column_id}}/?post_id={{post_id}}/likePost/" class="btn btn-primary" onclick="">Like this post</a>
+                <a href= "/forum/column={{column.id}}/post={{post.id}}/likePost/" class="btn btn-primary" onclick="">Like this post</a>
                 </div>
             </div>
         </div>
