--- a/mytemplates/PostPage.html
+++ b/mytemplates/PostPage.html
@@ -32,16 +32,16 @@
                             <a class="nav-link" href="#">Back to Main</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ContestSearch.html">Go to Contest</a>
+                            <a class="nav-link" href="/contest/index/">Go to Contest</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Forum.html">Go to Forum</a>
+                            <a class="nav-link" href="/forum/">Go to Forum</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">My Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Login/login.html">Sign In/Personal Page</a>
+                            <a class="nav-link" href="/user/login/">Sign In/Personal Page</a>
                         </li>
                     </ul>
                 </div>
@@ -112,10 +112,13 @@
                                             {{comment.content}}
                                         </p>
                                     </div>
+                                    <div align="right">
+                                            <a href="" class="btn btn-primary" onclick="">Like!</a>
+                                        </div>
                                     <div class="master-profile-reviews__review-meta">
-                                        {{comment.author}}, {{comment.created_at}}
-                                        <span>&nbsp&nbsp&nbsp&nbsp</span>
-                                        <button class="btn btn-primary" onclick="">Like this comment</button>
+                                        {{comment.author}}
+
+                                        {{comment.created_at}}
                                     </div>
                                 </div>
                             </div>
