--- a/mytemplates/contestrequested.html
+++ b/mytemplates/contestrequested.html
@@ -44,16 +44,16 @@
                             <a class="nav-link" href="#">Back to Main</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ContestSearch.html">Go to Contest</a>
+                            <a class="nav-link" href="/contest/index/">Go to Contest</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Forum.html">Go to Forum</a>
+                            <a class="nav-link" href="/forum/">Go to Forum</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">My Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Login/login.html">Sign In/Personal Page</a>
+                            <a class="nav-link" href="/user/login/">Sign In/Personal Page</a>
                         </li>
                     </ul>
                 </div>
