--- a/mytemplates/teammates.html
+++ b/mytemplates/teammates.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog Template">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/iconstyles.css">
 
     <!-- FontAwesome JS-->
     <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/monokai-sublime.min.css">
 
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
-    <link rel="stylesheet" type="text/css" href="css/style.min.css">
+    <link id="theme-style" rel="stylesheet" href="/static/assets/css/theme-1.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.min.css">
 
 </head>
 
@@ -75,7 +75,7 @@
 
     <div id="navigation" class="collapse navbar-collapse flex-column" >
       <div class="profile-section pt-3 pt-lg-0">
-          <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/male-avatar.png" alt="image" >
+          <img class="profile-image mb-3 rounded-circle mx-auto" src="/static/assets/images/male-avatar.png" alt="image" >
 
         <div class="bio mb-3">brief self introduction here</a></div><!--//bio-->
             <hr>
@@ -94,112 +94,43 @@
       <!-- TEAMMATES INFORMATION -->
       <section class="project-detail section-padding">
            <div class="container">
-                <div class="row">
+               <h1>{{team.name}}</h1>
 
+               <div class="row">
                    <div class="col-lg-6 col-md-6 col-12 mb-5">
-
-                       <img src="assets/images/1.jpg" class="img-fluid" alt="teammate 1" data-aos="fade-up">
-                     </div>
-
-                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-
-                       <h2>Steve Rogers</h2>
-
-                       <p class="mt-3 mb-4">Leader</p>
-
-                       <ul class="list-detail">
-                         <li><span>Strong leadership and team spirits</span></li>
-                         <li><span>Good at chemistry and biology</span></li>
-                       </ul>
-                     </div>
-                </div>
-
-                <div class="row">
-
+                       <img src="/static/assets/images/1.jpg" class="img-fluid" alt="teammate 1" data-aos="fade-up">
+                       </div>
+                           <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
+                               <h4>{{row.first_name}}, {{row.last_name}}</h4>
+                               <p class="mt-3 mb-4">Leader</p>
+                               <ul class="list-detail">
+                                   <li><span>major: {{row.major}}</span></li>
+                                   <li><span>email: {{row.email}}</span></li>
+                               </ul>
+                           </div>
+                       </div>
+               {% for row in members %}
+               <div class="row">
                    <div class="col-lg-6 col-md-6 col-12 mb-5">
+                       <img src="/static/assets/images/2.jpg" class="img-fluid" alt="teammate 1" data-aos="fade-up">
+                       </div>
+                           <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
+                               <h4>{{row.first_name}}, {{row.last_name}}</h4>
+                               <ul class="list-detail">
+                                   <li><span>major: {{row.major}}</span></li>
+                                   <li><span>email: {{row.email}}</span></li>
+                               </ul>
+                           </div>
+                       </div>
+               {% endfor %}
 
-                       <img src="assets/images/2.jpg" class="img-fluid" alt="teammate 2" data-aos="fade-up">
-                     </div>
-
-                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-
-                       <h2>Tony Stark</h2>
-
-                       <p class="mt-3 mb-4">Vice-header</p>
-
-                       <ul class="list-detail">
-                         <li><span>Graduated from MIT at the age of 18 </span></li>
-                         <li><span>Very talented at computer science</span></li>
-                       </ul>
-                     </div>
-                </div>
-
-                <div class="row">
-
-                   <div class="col-lg-6 col-md-6 col-12 mb-5">
-
-                       <img src="assets/images/3.png" class="img-fluid" alt="teammate 3" data-aos="fade-up">
-                     </div>
-
-                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-
-                       <h2>Peter Parker</h2>
-
-                       <p class="mt-3 mb-4">Technical Assistant</p>
-
-                       <ul class="list-detail">
-                         <li><span>Won many awards in technical competitons</span></li>
-                         <li><span>Good at coding and robotics</span></li>
-                       </ul>
-                     </div>
-                </div>
-
-                <div class="row">
-
-                   <div class="col-lg-6 col-md-6 col-12 mb-5">
-
-                       <img src="assets/images/4.png" class="img-fluid" alt="teammate 4" data-aos="fade-up">
-                     </div>
-
-                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-
-                       <h2>Diana Prince</h2>
-
-                       <p class="mt-3 mb-4">Spokesman</p>
-
-                       <ul class="list-detail">
-                         <li><span>Major in Quantitative Finance and Risk Management</span></li>
-                         <li><span>Strong communication and presentation skills</span></li>
-                       </ul>
-                     </div>
-                </div>
-
-                <div class="row">
-
-                   <div class="col-lg-6 col-md-6 col-12 mb-5">
-
-                       <img src="assets/images/5.jpg" class="img-fluid" alt="teammate 5" data-aos="fade-up">
-                     </div>
-
-                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-
-                       <h2>Barry Allen</h2>
-
-                       <p class="mt-3 mb-4">Helper</p>
-
-                       <ul class="list-detail">
-                         <li><span>Has fair abilities in various fields</span></li>
-                         <li><span>Can undertake any task in emergent situations</span></li>
-                       </ul>
-                     </div>
-                </div>
                <!-- TEAMMATES INFORMATION END-->
 
                <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
                  <div class="client-info mt-lg-5 py-lg-5">
-                     <p>Team's slogan:</p>
-                     <h3>Coming together is a beginning. Keeping together is progress. Working together is success!</h3>
-                     <img src="assets/images/teamwork.jpg" class="img-fluid" alt="teamwork">
+                     <h3>Team's Announcemment:</h3>
+                     <p>{{team.announce}}</p>
+                     <img src="/static/assets/images/teamwork.jpg" class="img-fluid" alt="teamwork">
                  </div>
                </div>
            </div>
@@ -214,7 +145,7 @@
 
                        <h1 class="mb-4">Unsatisifed with your current team?</h1>
                        <p>You can choose to leave if conditions permitting. The process will usually take several days.</a></p>
-                       <img src="assets/images/leave.png" class="img-fluid" alt="leave">
+                       <img src="/static/assets/images/leave.png" class="img-fluid" alt="leave">
                      </div>
 
                      <div class="col-lg-8 mx-auto col-md-10 col-12">
@@ -319,18 +250,18 @@
 
 
     <!-- Javascript -->
-    <script src="assets/plugins/jquery-3.3.1.min.js"></script>
-    <script src="assets/plugins/popper.min.js"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/assets/plugins/jquery-3.3.1.min.js"></script>
+    <script src="/static/assets/plugins/popper.min.js"></script>
+    <script src="/static/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Page Specific JS -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="assets/js/blog.js"></script>
+    <script src="/static/assets/js/blog.js"></script>
 
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-    <script src="assets/js/demo/style-switcher.js"></script>
+    <script src="/static/assets/js/demo/style-switcher.js"></script>
 
 
 </body>
