--- a/mytemplates/team-list.html
+++ b/mytemplates/team-list.html
@@ -96,7 +96,7 @@
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="/static/assets/images/blog/blog-post-thumb-7.jpg" alt="image">
 					    <div class="media-body">
-						    <h3 class="title mb-1"><a href="teammates.html">{{row.name}}</a></h3>
+						    <h3 class="title mb-1"><a href="/user/teampage/team_id={{row.id}}">{{row.name}}</a></h3>
 							<div class="meta mb-1"><span class="people">Capacity: {{row.team_members.count|add:1}} / {{row.capacity}}</span></div>
 						    <div class="intro">We want: {{row.requirement}} </div>
 						    <a class="more-link" href="teammates.html">Join &rarr;</a>
