--- a/mytemplates/teammates.html
+++ b/mytemplates/teammates.html
@@ -95,17 +95,19 @@
       <section class="project-detail section-padding">
            <div class="container">
                <h1>{{team.name}}</h1>
+               <a href="/contest/contestpage/?contest_id={{team.contest.id}}">Contest: {{team.contest.name}}</a>
 
                <div class="row">
                    <div class="col-lg-6 col-md-6 col-12 mb-5">
                        <img src="/static/assets/images/1.jpg" class="img-fluid" alt="teammate 1" data-aos="fade-up">
                        </div>
                            <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
-                               <h4>{{row.first_name}}, {{row.last_name}}</h4>
+                               <h4>{{leader.first_name}},{{leader.last_name}}</h4>
                                <p class="mt-3 mb-4">Leader</p>
                                <ul class="list-detail">
-                                   <li><span>major: {{row.major}}</span></li>
-                                   <li><span>email: {{row.email}}</span></li>
+                                   <li><span>MAJOR: {{leader.major}}</span></li>
+                                   <li><span>EMAIL: {{leader.email}}</span></li>
+                                   <li><span>MOTTO: {{leader.motto}}</span></li>
                                </ul>
                            </div>
                        </div>
@@ -117,8 +119,9 @@
                            <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
                                <h4>{{row.first_name}}, {{row.last_name}}</h4>
                                <ul class="list-detail">
-                                   <li><span>major: {{row.major}}</span></li>
-                                   <li><span>email: {{row.email}}</span></li>
+                                   <li><span>MAJOR: {{row.major}}</span></li>
+                                   <li><span>EMAIL: {{row.email}}</span></li>
+                                   <li><span>MOTTO: {{row.motto}}</span></li>
                                </ul>
                            </div>
                        </div>
