--- a/mytemplates/AddPost.html
+++ b/mytemplates/AddPost.html
@@ -78,7 +78,7 @@
                         <label for="exampleTextarea">Add photo for vivid illustration</label>
                         <div class="master-post-application__photos">
                             <div class="master-post-application__photo">
-                                <img src="images/01.png" alt="">
+                                <img src="/static/images/01.png" alt="">
                                 <span class="iconfont-close-solid-v3 master-post-application__photo-remove"></span>
                             </div>
                             <div class="master-post-application__photo">
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <label for="upfile">Upload File</label>
+                                <label for="myfile">Upload File</label>
                                 <!--file upload here-->
                                 <input type="file" id="myFile" name="filename">
                                 <!--Submit button here-->
@@ -147,7 +147,7 @@
                     </div>
                     <div class="form-group mt-3">
                         <!--final submit button here-->
-                        <button type="button" class="btn btn-primary btn-rounded btn-lg master-post-application__submit-btn">Publish</button>
+                        <button type="submit" class="btn btn-primary btn-rounded btn-lg master-post-application__submit-btn">Publish</button>
                     </div>
 
                 </form>
@@ -171,9 +171,9 @@
             <div class="col-lg-6">
                 <h6 class="footer-default__heading">About</h6>
                 <p>
-                    Morbi convallis bibendum urna ut viverra. Maecenas quis consequat
-                    libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet
-                    ullamcorper phasellus semper.
+                    This website aims at provide platform for student to participate in the contest.
+                    We hope that every candidate should have opportunities to show themselves.
+                    Designed for course CSCI3100.
                 </p>
 
                 <a href="#" class="btn btn-outline-secondary btn-get-started">Get Started</a>
