--- a/mytemplates/forumindex.html
+++ b/mytemplates/forumindex.html
@@ -85,7 +85,7 @@
                         <div class="d-flex">
                             <span class="icon iconfont-clock-outline listing-orders-with-filter__icon"></span>
                             <div>
-                                <a href="PostPage.html" class="listing-orders-with-filter__title">{{post.title}}</a>
+                                <a href="/forum/column={{post.column.id}}/post={{post.id}}/" class="listing-orders-with-filter__title">{{post.title}}</a>
                                 <p class="listing-orders-with-filter__description">Author: <b>{{post.author}}</b></p>
                             </div>
                         </div>
