--- a/mytemplates/ContestSearch.html
+++ b/mytemplates/ContestSearch.html
@@ -41,7 +41,7 @@
                     </div>
                     <ul class="nav header-topbar__nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Back to Main</a>
+                            <a class="nav-link" href="/">Back to Main</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contest/index/">Go to Contest</a>
@@ -229,9 +229,9 @@
             <div class="col-lg-6">
                 <h6 class="footer-default__heading">About</h6>
                 <p>
-                    Morbi convallis bibendum urna ut viverra. Maecenas quis consequat
-                    libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet
-                    ullamcorper phasellus semper.
+                    This website aims at provide platform for student to participate in the contest.
+                    We hope that every candidate should have opportunities to show themselves.
+                    Designed for course CSCI3100 only.
                 </p>
 
                 <a href="#" class="btn btn-outline-secondary btn-get-started">Get Started</a>
