--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -97,9 +97,9 @@
 
         <div class="subscribe">
             <h4><br>Counl not find a desired team? </h4>
-            <form>
+            <form method="post" action="/user/followCon/contest_id={{contest.id}}">
             <!--input name of team? maybe deleted-->
-                <input type="button" value="Just Follow >_<!" style="background: red; color: white;font-size: 16px;padding: 0 20px;border: 0;height: 60px">
+                <input type="submit" value="Just Follow >_<!" style="background: red; color: white;font-size: 16px;padding: 0 20px;border: 0;height: 60px">
             </form>
       </div>
 
