--- a/mytemplates/team-list.html
+++ b/mytemplates/team-list.html
@@ -83,7 +83,7 @@
     <div class="main-wrapper">
       <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center">
-			    <h2 class="heading">{{contest_name}}</h2>
+			    <h2 class="heading">{{contest.name}}</h2>
 			    <div class="intro"></div>
 		    </div><!--//container-->
 	    </section>
@@ -99,11 +99,12 @@
 						    <h3 class="title mb-1"><a href="/user/teampage/team_id={{row.id}}">{{row.name}}</a></h3>
 							<div class="meta mb-1"><span class="people">Capacity: {{row.team_members.count|add:1}} / {{row.capacity}}</span></div>
 						    <div class="intro">We want: {{row.requirement}} </div>
-						    <a class="more-link" href="teammates.html">Join &rarr;</a>
+						    <a class="more-link" href="/user/addteam/team_id={{row.id}}&contest_id={{contest.id}}">Join &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
 			    </div><!--//item-->
 				{% endfor %}
+
           <!--
 			    <nav class="blog-nav nav nav-justified my-5">
 				  <a class="nav-link-prev nav-item nav-link rounded-left" href="team.html">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
@@ -182,6 +183,13 @@
       <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
       <script src="/static/assets/js/demo/style-switcher.js"></script>
 
+	{% if messages %}
+        <script>
+            {% for msg in messages %}
+                alert('{{ msg.message }}');
+            {% endfor %}
+        </script>
+    {% endif %}
 
   </body>
   </html>
